logs/validate.20260408-052101.log
Mode: isolate
Isolate: including Chap37 Chap18 Chap19 Chap23 Chap02
error: unexpected token, expected `;`
   --> src/Chap37/BSTRBStEph.rs:279:29
    |
279 | ...                   by {
    |                       ^^

error[E0425]: cannot find type `BSTRBStEph` in this scope
   --> src/Chap37/BSTRBStEph.rs:721:50
    |
721 |     impl<T: std::fmt::Debug> std::fmt::Debug for BSTRBStEph<T> {
    |                                                  ^^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `BSTRBStEph` in this scope
   --> src/Chap37/BSTRBStEph.rs:729:72
    |
729 |     impl<T: std::fmt::Debug + std::fmt::Display> std::fmt::Display for BSTRBStEph<T> {
    |                                                                        ^^^^^^^^^^ not found in this scope

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0425`.
Elapsed: 5s
Sampled Memory Usage: peak rust_verify RSS: 3843MB, peak z3 RSS: 408MB, min free: 22404MB
Sampled CPU Usage: rust_verify: 67s, z3 children: 73s
